# MultiClip

./: .gitignore  4-stage-blueprint.py.md  README-diff-integration.md  README.md  __init__.py  bbfb935 Clean peacock core system  clipboard_dict.json  core.py  diff-marker.json  diff-marker.md  dsafdsaf.sh  dsfdsfsdf.py  hi everyone welcome back to the AI language today  keyes.py  multiclip-control.sh  multiclip-poetry-service.sh  multiclip-service.sh  multiclip.py  orderly.py  pyhott.py  pyproject.toml  requirements.txt  run_multiclip.sh  setup.sh  sfdfsdf  termtest.py  test_original.py  testpyhot.py
analysis/: stage1-spark-requirements.md  stage2-falcon-architecture.md  stage3-eagle-implementation.md  stage4-hawk-quality.md
diff_marker/: __init__.py  diff_interface.py  diff_manager.py  diff_types.py
gui/: main_window.py
notebooks/: OpenAI_Whisper_-_DotCSV_(Speech_dataset_multi-transcryption_support)en.ipynb
src/ui/: __init__.py  toast.py  tray.py
src/utils/: storage.py
